--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
+  measure_size: ^4.0.0
 
 dev_dependencies:
   flutter_test:
