--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
   measure_size: ^4.0.0
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
