--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.9
   measure_size: ^4.0.0
   shared_preferences: ^2.1.1
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
